[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Silvio Henrique Fleming <silviohfleming@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.1"
django-debug-toolbar = "^4.0.0"
psycopg2-binary = "^2.9.6"
flake8 = "^6.0.0"
black = "^23.3.0"
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
